<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/info"
        android:title="@string/info"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_repo"
        android:icon="@drawable/report"
        android:title="@string/reports"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_import"
        android:title="@string/import_database"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_acc_export"
        android:checkable="true"
        android:title="@string/export_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exAll"
        android:title="@string/export_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_current"
        android:title="@string/export_current_year"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_db"
        android:title="@string/export_db"
        app:showAsAction="never" />


</menu>