<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".Expense.Find.DateFindActivity">

    <LinearLayout
        android:id="@+id/linearFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/start_date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/end_date"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/btnFind"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@android:drawable/screen_background_light_transparent"
            android:contentDescription="@string/find"
            android:scaleType="centerInside"
            android:src="@drawable/ic_find"
            android:text="@string/find"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <include layout="@layout/floating_rv_layout" />

</LinearLayout>
