<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".Expense.Find.CatFindActivity">

    <LinearLayout
        android:id="@+id/linearFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/actFind"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/search"
                android:inputType="textCapWords"
                android:maxLines="1" />

            <ImageButton
                android:id="@+id/btnClear"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:contentDescription="@string/cancel"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <ImageButton
                android:id="@+id/btnShow"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:contentDescription="@string/search"
                android:src="@android:drawable/ic_menu_search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spnAccFind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spnCatFind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spnDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sbtnType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sbtnOrder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp" />

            <ImageButton
                android:id="@+id/btnFind"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/find"
                android:scaleType="centerInside"
                android:src="@drawable/ic_find"
                android:text="@string/find"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <include layout="@layout/floating_rv_layout" />

</LinearLayout>
