<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        tools:ignore="HardcodedText">

        <ImageButton
            android:id="@+id/btnMin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/white_transparent"
            android:contentDescription="Add"
            android:scaleType="fitCenter"
            android:src="@drawable/minus" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="20-09-2017"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="05:43 PM"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/white_transparent"
            android:contentDescription="Add"
            android:scaleType="fitCenter"
            android:src="@drawable/plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spnAcc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:entries="@array/asd"
            android:gravity="center" />

        <Spinner
            android:id="@+id/spnCat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:entries="@array/asd" />

    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/amount"
        android:inputType="number"
        app:met_floatingLabel="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/etDesc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/dsc"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/btnClear"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:contentDescription="@string/cancel"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <ImageButton
            android:id="@+id/btnShow"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:contentDescription="@string/search"
            android:src="@android:drawable/ic_menu_search" />

    </LinearLayout>

</LinearLayout>